--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "i-coder-backend",
+  "name": "web-cli",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js"
+    "start": "node backend/server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1"
+    "cors": "^2.8.5"
   }
 }
